    values after we're finished reading the SConscript files.

  - Have ParseConfig() recognize and supporting adding the -Wa, -Wl,
    and -Wp, flags to ASFLAGS, LINKFLAGS and CPPFLAGS, respectively.

  - Change the .sconsign format and the checks for whether a Node is
    up-to-date to make dependency checks more efficient and correct.

  From Gary Oberbrunner:

  - Add a --debug=presub option to print actions prior to substitution.

  - Add a warning upon use of the override keywords "targets" and
    "sources" when calling Builders.  These are usually mistakes which
    are otherwise silently (and confusingly) turned into construction
    variable overrides.

  - Try to find the ICL license file path name in the external environment
    and the registry before resorting to the hard-coded path name.

  From Simon Perkins:

  - Fix a bug introduced in building shared libraries under MinGW.

  From Anthony Roach:

  - Fix use of the --implicit-cache option with timestamp signatures.

  - If Visual Studio is installed, assume the C/C++ compiler, the linker
    and the MIDL compiler that comes with it are available, too.

  From sam th:

  - Allow SConf.CheckLib() to search a list of libraries, like the
    Autoconf AC_SEARCH_LIBS macro.

  - Allow the env.WhereIs() method to take a "reject" argument to
    let it weed out specific path names.



RELEASE 0.95 - Mon, 08 Mar 2004 06:43:20 -0600

  From Chad Austin:

  - Replace print statements with calls to sys.stdout.write() so output
    lines stay together when -j is used.

  - Add portability fixes for a number of tests.

  - Accomodate the fact that Cygwin's os.path.normcase() lies about
    the underlying system being case-sensitive.

  - Fix an incorrect _concat() call in the $RCINCFLAGS definition for
    the mingw Tool.

  - Fix a problem with the msvc tool with Python versions prior to 2.3.

  - Add support for a "toolpath" Tool() and Environment keyword that